replace KY-028 Thermistor with dht11 sensor

--- a/Ultrasonic+temp+8266/platformio.ini
+++ b/Ultrasonic+temp+8266/platformio.ini
@@ -14,3 +14,10 @@ board = nodemcuv2
 framework = arduino
 build_flags = -D CORE_DEBUG_LEVEL=5   ; optional — more debug output later
 monitor_speed = 115200
+
+build_src_filter = -<main.cpp> -<dht11_test.cpp> +<main_dht11.cpp>
+
+
+lib_deps = 
+    adafruit/DHT sensor library@^1.4.6
+    ; or robtillaart/DHTNEW@^0.2.0 (often more reliable on ESP)
